[package]
authors = ["Sean Leffler <sean@errno.com>"]
categories = ["api-bindings", "asynchronous", "concurrency", "database"]
description = "A type-safe, high-level interface to librados using the low-level C bindings from ceph-rust."
documentation = "https://docs.rs/rad/"
homepage = "https://github.com/sdleffler/rad-rs/"
keywords = ["librados", "rados", "ceph", "safe", "storage"]
license = "MPL-2.0"
name = "rad"
readme = "README.md"
repository = "https://github.com/sdleffler/rad-rs/"
version = "0.5.0"

[dependencies]
#ceph = "2.0"
#ceph = { path = "../ceph-rust" }
ceph = { git = "https://github.com/mateusz-gozdek-sociomantic/ceph-rust", branch = "daemon-register" }
chrono = "0.4"
error-chain = "0.11"
ffi-pool = "0.1"
futures = "0.1"
lazy_static = "1.2"
libc = "0.2"
stable_deref_trait = "1.1"

[dev-dependencies]
rand = "0.3.16"

[features]
integration-tests = []
